Toggling "Linked" checkbox in redo panel makes all future Duplicate operations into Duplicate Linked #65490

Closed
opened 2019-06-04 14:47:57 +02:00 by tom k · 3 comments

System Information
Operating system: Linux Mint 18.3 Cinnamon 64-bit
Graphics card: NVIDIA GeForce GTX 750 Ti

Blender Version
Broken: 2.80 d62a749fcf

Problem:
The "Linked" checkbox in the redo panel for the Duplicate operation (Shift+D) overrides the intended operation on future uses. That is, Duplicate can be made to Duplicate Linked instead. This is because the state of the checkbox persists between operations.

Steps to reproduce (from default scene):
(Optional: set Properties editor to Object Data tab and observe datablock name/use count)

  1. Duplicate the cube (Shift+D).
  2. Expand the redo panel and check the "Linked" checkbox.

There are now two cubes sharing Cube mesh datablock (as expected).

  1. Now, Duplicate a cube again (Shift+D).

There are now three cubes sharing Cube mesh datablock. The "Linked" checkbox is still checked.

Expected Result: The first two cubes with Cube mesh datablock, and the third with a new Cube.001 mesh datablock.
The "Linked" checkbox should be unchecked with Duplicate (Shift+D).

Example of this being a problem in practice:
User intends to make a linked duplicate of object. Accidentally makes normal duplicate. Fixes this by checking "Linked" checkbox. User's intention was "undo that duplicate, and perform a linked duplicate instead", but what actually happened was "never make unlinked duplicates again".

Further Notes:
Duplicate Linked (Alt+D) does not have this problem: the checkbox is set correctly each time and changing it does not interfere with shift+D Duplicate.

**System Information** Operating system: Linux Mint 18.3 Cinnamon 64-bit Graphics card: NVIDIA GeForce GTX 750 Ti **Blender Version** Broken: 2.80 d62a749fcf48 Problem: The "Linked" checkbox in the redo panel for the Duplicate operation (Shift+D) overrides the intended operation on future uses. That is, Duplicate can be made to Duplicate Linked instead. This is because the state of the checkbox persists between operations. Steps to reproduce (from default scene): (Optional: set Properties editor to Object Data tab and observe datablock name/use count) 1. Duplicate the cube (Shift+D). 2. Expand the redo panel and check the "Linked" checkbox. There are now two cubes sharing Cube mesh datablock (as expected). 3. Now, Duplicate a cube again (Shift+D). There are now three cubes sharing Cube mesh datablock. The "Linked" checkbox is still checked. Expected Result: The first two cubes with Cube mesh datablock, and the third with a new Cube.001 mesh datablock. The "Linked" checkbox should be unchecked with Duplicate (Shift+D). Example of this being a problem in practice: User intends to make a linked duplicate of object. Accidentally makes normal duplicate. Fixes this by checking "Linked" checkbox. User's intention was "undo that duplicate, and perform a linked duplicate instead", but what actually happened was "never make unlinked duplicates again". Further Notes: Duplicate Linked (Alt+D) does not have this problem: the checkbox is set correctly each time and changing it does not interfere with shift+D Duplicate.
Author

Added subscriber: @tomjk

Added subscriber: @tomjk

This issue was referenced by a8e5ad9a56

This issue was referenced by a8e5ad9a565e058748a3a7de98f863fc81f0e863

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65490
No description provided.