Fix T65490: linked property in object duplicate should not persist

These things are somewhat arbitrary, but since there are separate shortcuts
and menu entries this seems the more expected behavior.